--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
     <title>Document</title>
 </head>
 <body>
+<a href="https://www.google.com">Click here for google</a>    
 <form method="POST">
+<label for="firstname">FirstName</label><br>
+<input type="firstname" name="FirstName" id="firstname"><br>
+
+<label for="middlename">MiddleName</label><br>
+<input type="middlename" name="MiddleName" id="middlename"><br> 
+
+<label for="lastname">LastName</label><br>
+<input type="lastname" name="MiddleName" id="lastname"><br>   
+    
 <label for="email">Email</label><br>
 <input type="email" name="Email" id="email"><br>
 
