--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-<a href="https://www.google.com">Click here for google</a>    
+
 <form method="POST">
 <label for="firstname">FirstName</label><br>
 <input type="firstname" name="FirstName" id="firstname"><br>
@@ -28,6 +28,8 @@
 <label for="Female">Female</label>
 <input type="radio" name="gender" id="Female">
 
+<input type="file" name="FileUpload" id="FileUpload"><br>    
+    
 <input type="submit" value="Submit">
 
 </form>
