--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <form method="POST">
-<label for="firstname">FirstName</label><br>
+<label for="firstname"><b><<font color="red">>FirstName</label></font></b><br>
 <input type="firstname" name="FirstName" id="firstname"><br>
 
 <label for="middlename">MiddleName</label><br>
@@ -21,16 +21,6 @@
 
 <label for="password">password</label><br>
 <input type="password" name="pass" id="password"><br>
-
-<label for="Male">Male</label>
-<input type="radio" name="gender" id="Male">
-
-<label for="Female">Female</label>
-<input type="radio" name="gender" id="Female">
-
-<input type="file" name="FileUpload" id="FileUpload"><br>    
-    
-<input type="submit" value="Submit">
 
 </form>
 </body>
