--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
 <body>
 
 <form method="POST">
-<label for="firstname"><b><<font color="red">>FirstName</label></font></b><br>
+<label for="firstname"><b><font color="red">FirstName</label></font></b><br>
 <input type="firstname" name="FirstName" id="firstname"><br>
 
-<label for="middlename">MiddleName</label><br>
+<label for="middlename"><b><font color="blue">MiddleName</font></b></label><br>
 <input type="middlename" name="MiddleName" id="middlename"><br> 
 
-<label for="lastname">LastName</label><br>
+<label for="lastname"><b><font color="yellow">LastName</font></b></label><br>
 <input type="lastname" name="MiddleName" id="lastname"><br>   
     
-<label for="email">Email</label><br>
+<label for="email"><b><font color="pink">Email</font></b></label><br>
 <input type="email" name="Email" id="email"><br>
 
-<label for="password">password</label><br>
+<label for="password"><b><font color="violet">password</font></b></label><br>
 <input type="password" name="pass" id="password"><br>
 
 </form>
