--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<style>
+body {
+  background-color: olive;
+}
+</style>
     <meta charset="UTF-8">
     <title>Document</title>
 </head>
@@ -13,7 +18,7 @@
 <label for="middlename"><b><font color="blue">MiddleName</label></font></b><br>
 <input type="middlename" name="MiddleName" id="middlename"><br> 
 
-<label for="lastname"><b><font color="yellow">LastName</label></font></b><br>
+<label for="lastname"><b><font color="orange">LastName</label></font></b><br>
 <input type="lastname" name="MiddleName" id="lastname"><br>   
     
 <label for="email"><b><font color="pink">Email</label></font></b><br>
