--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<style>
-body {
-  background-color: olive;
-}
-</style>
+ <body style="background-color:olive">
     <meta charset="UTF-8">
     <title>Document</title>
 </head>
