--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <body style="background-color:biege">
+ <body style="background-color:biege;">
     <meta charset="UTF-8">
     <title>Document</title>
 </head>
