--- a/index.html
+++ b/index.html
@@ -1,28 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <body style="background-color:peachpuff;">
     <meta charset="UTF-8">
     <title>Document</title>
 </head>
 <body>
-
 <form method="POST">
-<label for="firstname"><b><font color="red">FirstName</label></font></b><br>
-<input type="firstname" name="FirstName" id="firstname"><br>
-
-<label for="middlename"><b><font color="blue">MiddleName</label></font></b><br>
-<input type="middlename" name="MiddleName" id="middlename"><br> 
-
-<label for="lastname"><b><font color="orange">LastName</label></font></b><br>
-<input type="lastname" name="MiddleName" id="lastname"><br>   
-    
-<label for="email"><b><font color="pink">Email</label></font></b><br>
+<label for="email">Email</label><br>
 <input type="email" name="Email" id="email"><br>
-
-<label for="password"><b><font color="violet">password</label></font></b><br>
+<label for="password">password</label><br>
 <input type="password" name="pass" id="password"><br>
 
+<label for="Male">Male</label>
+<input type="radio" name="gender" id="Male">
+
+<label for="Female">Female</label>
+<input type="radio" name="gender" id="Female">
+
+<input type="submit" value="Submit">
 </form>
 </body>
 </html>
